# ChangeLog for dev-tcltk/mysqltcl
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/mysqltcl/ChangeLog,v 1.12 2008/04/10 18:31:56 fmccor Exp $

  10 Apr 2008; Ferris McCormick <fmccor@gentoo.org> mysqltcl-3.02.ebuild:
  Add ~sparc at user's (LabMonkey) suggestion. Nice application and appears to
  work.

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> mysqltcl-2.40.ebuild,
  mysqltcl-2.50.ebuild, mysqltcl-3.02.ebuild:
  dev-db/mysql => virtual/mysql

*mysqltcl-3.02 (04 Jun 2006)

  04 Jun 2006; MATSUU Takuto <matsuu@gentoo.org> mysqltcl-2.40.ebuild,
  +mysqltcl-3.02.ebuild:
  Fixed bash-3.1 issue, bug 119873

  12 Dec 2005; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Update metadata.xml.

  17 Oct 2004; David Holm <dholm@gentoo.org> mysqltcl-2.50.ebuild:
  Added to ~ppc.

  28 Sep 2004; MATSUU Takuto <matsuu@gentoo.org> mysqltcl-2.50.ebuild:
  Added to ~amd64.

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> mysqltcl-2.40.ebuild:
  Added IUSE

*mysqltcl-2.50 (04 Apr 2004)

  04 Apr 2004; Chris Aniszczyk <zx@gentoo.org> metadata.xml,
  mysqltcl-2.14-r1.ebuild, mysqltcl-2.14.ebuild, mysqltcl-2.40.ebuild,
  mysqltcl-2.50.ebuild:
  Version bump. Major clean up. Marking 2.40 stable on x86.

*mysqltcl-2.40 (17 Jan 2004)

  17 Jan 2004; Martin Holzer <mholzer@gentoo.org> mysqltcl-2.40.ebuild:
  Version bumped. Closes 38415

*mysqltcl-2.14-r1 (27 Nov 2003)

  27 Nov 2003; Robin H. Johnson <robbat2@gentoo.org> mysqltcl-2.14-r1.ebuild:
  remove unneeded tk depend

*mysqltcl-2.14 (04 Jun 2003)

  14 Apr 2003; Robin Johnson <robbat2@gentoo.org> mysqltcl-2.14.ebuild:
  Initial import. Ebuild submitted by Sean Woods <yoda@etoyoc.com>.