@@ -1,8 +1,4 @@
-DIST mysqltcl-2.40.tar.gz 142997 RMD160 625bedda64aa9cf1b5db52ccd782eaffe25bbf5c SHA1 17a0d3a4f1bc3b225778910f74ed992f0a9efadf SHA256 fff3368ab4c2b73735a73cd561e979d5bcf5e00748abbecc33e1676bf091152a
-DIST mysqltcl-2.50.tar.gz 143641 RMD160 ec7aff73371960169e4c9d7ecadee463c7b117bf SHA1 110ca3d79552ec5d03c60b38789a0e66c2ea262f SHA256 1eba03611d808828b708d099b832c2d47ce1aa84f145e2aeeeb45cd3e8060b91
 DIST mysqltcl-3.02.tar.gz 193912 RMD160 f110df1b9f2f2bd960257577fe5a72b6159fc1cd SHA1 592cc5d000a4ec18bc4ff16b6caedaaf5142f270 SHA256 b07d19a41da0b55912cc05150cde04340ecc673354f4a00edcede832e095c206
-EBUILD mysqltcl-2.40.ebuild 755 RMD160 7463e198fb7d6787c06121a6f38e1232dbcc9266 SHA1 12773b6936909c7f9faf0bead1b9c510af991153 SHA256 225bcd8fa8c94330697c419102aaebdeb61207c024cf0f7f1cd12352706eb3cb
-EBUILD mysqltcl-2.50.ebuild 650 RMD160 97d81609cb9200a5ecbd7b8f9df895785e25a81c SHA1 4f54a864e347d026519bf67ee8d5ac39b6f28d87 SHA256 7733508b565428ec1ac0d1713f5232c191b748f54cddcc0c794e485e0e04efec
 EBUILD mysqltcl-3.02.ebuild 620 RMD160 74d0c50926ed19a0330df75ad9f652a277c40d6f SHA1 28fe78385e9f3b778653f75b316cbfce50d686d7 SHA256 1313ceb37ac9df4e7260e823d9be786e420960345bf18d54d6a36c976ed70b05
-MISC ChangeLog 1726 RMD160 2c3bd0d178aaf338c3e9260370b3cb4a0c8fbf81 SHA1 a95a4e3f1efb761570231d492f3f47f932bb5f86 SHA256 e6d58ae4c93d4c78b72d1bf7dcfefb5571f8bbf21b1e6d5a0399a23fb93ffa04
+MISC ChangeLog 1901 RMD160 91fd737e4f2bd4b9ef86a12cbd9cfd95cc59d8d1 SHA1 14bdc531c9c14a1db3453393e9ae7f8ae11f9f8a SHA256 a5d0f055f1f781d6db6a0b057fcf91f54104abee22b20c1ace2806f3311bac12
 MISC metadata.xml 158 RMD160 17ad87fdb088c4a22ea1849e25da6efdddf26aa5 SHA1 e5826687b0a91fba71e62888faa74fe37f44045a SHA256 a212959a64142f5508788a3d336b55cdb97645b6e54d8a887e7308c67791d569
